k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: genesis-deployment
  namespace: default

spec:
  replicas: 3

  selector:
    matchLabels:
      app: genesis

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0

  template:
    metadata:
      labels:
        app: genesis

    spec:
      containers:
        - name: genesis
          image: nginx:1.26

          ports:
            - containerPort: 80
