k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: genesis-service
  namespace: default

spec:
  type: NodePort

  selector:
    app: genesis

  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
